# vulkan-fcnet

./: Cargo.toml  README.md  compile-shaders.sh
src/: cpu.rs  gpu.rs  gradient.comp  gradient.spv  gradient2.comp  gradient2.spv  loss.comp  loss.spv  main.rs  prevgpu.txt  scores.comp  scores.spv  scores2.comp  scores2.spv  shader.wgsl
