[package]
name = "vulkan-fcnet"
version = "0.1.0"
edition = "2021"

[dependencies]
mnist = "0.5.0"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"

ash = "0.37.2+1.3.238" #{ version = "0.37.2+1.3.238", features = ["linked", "debug"] }

# futures = "0.3.28"
# wgpu = { version = "0.16.0", features = ["spirv"] }

[profile.release]
debug = true
